AZO and Russia focus tree work

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -118,6 +118,11 @@
   PB_RUS_Middle_Class_Rising:0 "Rise of the Russian Middle Class"
   PB_RUS_Middle_Class_Rising_desc:0 "One of the biggest demograghic shifts of the Second Renaissance was the birth of the Russian middle class. For most of its' history, Russia was a country of haves and have-nots, with very little in between. As the industrial sector developed, however, the power of the nobility and the landowners was increasingly undermined by a growing caste of moderately wealthy former peasants.\n\nThese people would form the foundation of a middle class that would grow and mature to rival Russia's historic interest groups, and form the foundations for the rise of democracy. With industry came stable jobs, and with stable jobs came stable homes, and from that came the need for education, literacy, higher education, and intellectualism.\n\nThe middle class now forms the backbone of Russia's burgeoning political scene, and they will tenaciously defend their gains if need be."
 
+  PB_RUS_Project_Zona_idea:0 "Project §GZONA§!"
+  PB_RUS_Project_Primordium_idea:0 "Project §7PRIMORIDUM§!"
+  PB_RUS_Project_Autojektor_idea:0 "Project §rAUTOJEKTOR§!"
+  PB_RUS_Project_Somnambulist_idea:0 "Project §6SOMNAMBULIST§!"
+
   PB_RUS_Teslaism_Advantaged:0 "Teslite School Advantaged"
   PB_RUS_Teslaism_Empowered:0 "Teslite School Empowered"
   PB_RUS_Teslaism_Dominant:0 "Teslite School Dominant"
@@ -370,6 +375,38 @@
   Russia_Area_Zero.25.d:0 ""
   Russia_Area_Zero.25.a:0 "Doctor, I can't tell if I'm not me."
 
+  Russia_Area_Zero.26.t:0 "Plumbing the Uncanny Valley"
+  Russia_Area_Zero.26.d:0 ""
+  Russia_Area_Zero.26.a:0 "Apes with machine guns? Now I've seen everything."
+
+  Russia_Area_Zero.27.t:0 "Ape Strong Together"
+  Russia_Area_Zero.27.d:0 ""
+  Russia_Area_Zero.27.a:0 "Recover the research, put down the rebellion."
+
+  Russia_Area_Zero.28.t:0 "Don't Fear the Reaper"
+  Russia_Area_Zero.28.d:0 ""
+  Russia_Area_Zero.28.a:0 "Nor do the wind, the sun or the rain."
+
+  Russia_Area_Zero.29.t:0 "Sometimes, Dead is Better"
+  Russia_Area_Zero.29.d:0 ""
+  Russia_Area_Zero.29.a:0 "You gotta shoot em' in the head!"
+
+  Russia_Area_Zero.30.t:0 "The Building Blocks of Life"
+  Russia_Area_Zero.30.d:0 ""
+  Russia_Area_Zero.30.a:0 "And now they're ours to play with."
+
+  Russia_Area_Zero.31.t:0 "The Biophage Rises"
+  Russia_Area_Zero.31.d:0 ""
+  Russia_Area_Zero.31.a:0 "Uh, whoops?"
+
+  Russia_Area_Zero.32.t:0 "A Dream within a Dream"
+  Russia_Area_Zero.32.d:0 ""
+  Russia_Area_Zero.32.a:0 "You mustn't be afraid to dream a little bigger, darling."
+
+  Russia_Area_Zero.33.t:0 "Tulpa"
+  Russia_Area_Zero.33.d:0 ""
+  Russia_Area_Zero.33.a:0 "Apparently we need a counter-memetics division now."
+
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -415,15 +452,23 @@
   PB_RUS_Suspend_Elections:0 "Suspend the Elections"
 
   PB_RUS_Implement_Siberian_Plan:0 "Initiate the Siberian Plan"
+  PB_RUS_Implement_Siberian_Plan_desc:0 "With more pressing matters being seen to, it is time to turn our attention to the giant black spot on the map of Russia. The lands east of the Urals are sparse with people and even more so with modern technology. With many plans and ideas already being brought forward, a formal effort to cultivate the Siberian region to it's full potential must begin at once!"
   PB_RUS_Light_Up_Siberia:0 "Light Up Siberia"
+  PB_RUS_Light_Up_Siberia_desc:0 "Tesla's brilliance has served the crown well so far, and it would be wise to continue with their plans for Russia. As such, the proposed Siberian electrification program will finally be put into action. A wave of light will flood the barren wastes of the taiga, bringing with it the tide of modernization!"
   PB_RUS_Green_Up_Siberia:0 "Siberian Hydroponics Plan"
+  PB_RUS_Green_Up_Siberia_desc:0 "The expanse of land known as Siberia is home to countless flowing Rivers, and they can finally be put to use thanks to Lysenko's plan. Water-based power plants will be created across the region to provide with a reliable and self-sustaining energy base."
   PB_RUS_Import_Manchu:0 "Import Manchurian Guest Workers"
   PB_RUS_Ease_Oyrot_Industrialization:0 "Ease Up Oyrot Industrialization"
+  PB_RUS_Ease_Oyrot_Industrialization_desc:0 "If the backwards Oyrot refuse to embrace industrialization, then let them stay in the dark ages! We will not force development in thier lands if it is at such cost of men and resources to constantly squash their unrest."
   PB_RUS_Promote_Oyrot_Industrialization:0 "Enforce Oyrot Industrialization"
+  PB_RUS_Promote_Oyrot_Industrialization_desc:0 "Although they may resent us for it, the Oyrot people are subjects of the Tsar and as such they will do as they are directed. The wonders of technology will be brought to thier doorstep by thier own hands, we will make sure of it."
   PB_Form_the_Kuzzbass_Mining_Concern:0 "Form the Kuzzbass Mining Corporation" 
+  PB_Form_the_Kuzzbass_Mining_Concern_desc:0 " Ores, metals, gems, and more! The blessings of the Siberian lands are as great as the snow that falls upon them. A special state corporation, Kuzzbass, will be created to administer the mining and extraction of these resources."
   PB_Far_East_Economic_Integration:0 "Economic Integration with the Far East"
+  PB_Far_East_Economic_Integration_desc:0 "For all of modern Russian History, the land east of the Lake Baikal has been far removed from the affairs of the beating heart of Russia in the European regions, both geographically and economically. It is now time to change this. The far east with her cities and coasts will be brought into the fold, willingly or otherwise."
   PB_All_Roads_to_St_Petersburg:0 "All Roads lead to St. Petersburg"
   PB_Complete_Siberian_Plan:0 "Finalize the Siberian Plan"
+  PB_Complete_Siberian_Plan_desc:0 "At long last, after years of hard work, the greatest project the Russian Empire has ever attempted has been completed. The Siberian Plan, a plan to develop Siberia into a land equivalent to that of Western Russia, has finally been completed, and we can finally reap the vast land of the East to its fullest."
 
   PB_RUS_Create_Gosplan:0 "Create Gosplan"
   PB_Reorganize_Ukrainian_Grain:0 "Reorganize Ukrainian Grain Management"
@@ -533,6 +578,52 @@
   PB_RUS_Guide_the_Chinese:0 "A Natural Border in the East"
   PB_RUS_National_Panopticon:0 "The National Panopticon"
   PB_RUS_National_Panopticon_desc:0 "The Commonality Consensus, as proposed by Zofia Tesla, would be an abberation if implemented as originally designed. A system in which any person, regardless of determining factors, can cast their vote in an unregulated democratic system would be anarchy at best.\n\nStill, there is potential in her proposal, and with some adjustments this system might be the solution to Russia's eternal social unrest. With a system of implants and monitors, we could use the network to regularly scan citizen's thought patterns for anti-state beliefs, which could then be corrected with a broadcasted counter-pattern. A minimally invasive model would allow us to, with relatively little effort, rapidly condition the population to be more passive and supportive of the regime, eventually §Rwithout them even realizing it.§!"
+
+  PB_RUS_God_Returns_to_Save_Russia:0 "God Returns to Save Russia"
+  PB_RUS_Return_the_Old_Believers_to_the_Fold:0 "Return the Old Believers to the Fold"
+  PB_RUS_Canonize_Michael_ll:0 "Canonize Michael II"
+  PB_RUS_The_Lord_Awaits_Above:0 "The Lord Waits Above"
+  PB_RUS_Unify_the_Chruch_and_State:0 "Unite the Church and State"
+  PB_RUS_Construct_the_Grand_Cathedral_of_Christ:0 "Construct the Grand Cathedral of Christ"
+  PB_RUS_Consecrate_the_Field_of_Battle:0 "Consecrate the Field of Battle"
+  PB_RUS_Deus_Ex_Machina:0 "Deus Ex Machina"
+  PB_RUS_The_Conquest_of_Death:0 "The Conquest of Death"
+  PB_RUS_One_GodTwo_Paths:0 "One God, Two Paths"
+  PB_RUS_Consecrate_the_Libraries:0 "Consecrate the Libraries"
+  PB_RUS_theo_transhumanism:0 "Theo-Transhumanism"
+  PB_RUS_Unify_the_Russian_Noosphere:0 "Unify the Russian Noosphere"
+  PB_RUS_The_Common_Task_Ahead:0 "The Common Task Ahead"
+  PB_RUS_An_Empire_of_Faith:0 "An Empire of Faith"
+
+  PB_RUS_The_Great_Lover_at_the_Helm:0 "The Great Lover at the Helm"
+  PB_RUS_Sanctify_the_Khylsts:0 "Sanctify the Khylsts"
+  PB_RUS_Debauchery_in_the_Name_of_God:0 "Debauchery in the Name of God"
+  PB_RUS_The_Embodiment_of_Christ:0 "he Embodiment of Christ"
+
+  PB_RUS_Addressing_the_world:0 "Addressing the World"
+  PB_RUS_Peninsular_Security:0 "Penninsular Security"
+  PB_RUS_Enforce_Containment_Policy:0 "Containment Policy"
+  PB_RUS_Contain_Zhongyings_forces:0 "Contain Zhongying's Forces"
+  PB_RUS_Support_Norwegian_Independence:0 "Support Norwegian Independence"
+  PB_RUS_Support_Kurdish_Irredentism:0 "Support Kurdish Irredentism"
+  PB_RUS_Deploy_the_Okhrana_in_Prussia:0 "Deploy the Okhrana in Prussia"
+  PB_RUS_Reinforce_the_hungarian_border:0 "Reinforce the Hungarian Border"
+  PB_RUS_Dreams_of_a_russian_colony:0 "Dreams of a Russian Colony"
+  PB_RUS_Cleaning_up_our_Balkan_Mess:0 "Cleaning up our Balkan Mess"
+  PB_RUS_Retain_our_commitments_to_Serbia:0 "Retain our Commitments to Serbia"
+  PB_RUS_Reorient_towards_the_bulgars:0 "Reorient towards the Bulgars"
+  PB_RUS_Pressure_the_qajars:0 "Pressure the Qajars"
+  PB_RUS_Offer_advisors_to_the_Greeks:0 "Offer Advisors to the Greeks"
+  PB_RUS_Reinforce_occupied_Germany:0 "Reinforce Occupied Germany"
+  PB_RUS_Seize_the_swedish_baltic:0 "Seize the Swedish Baltic"
+  PB_RUS_Sway_the_Norwegians:0 "Sway the Norwegians"
+  PB_RUS_Funnel_support_to_kristiana:0 "Funnel support to Kristiana"
+  PB_RUS_The_romanov_crown_in_kristiana:0 "The Romanov Crown in Kristiana"
+  PB_RUS_Anywhere_but_Nuremburg:0 "Anywhere but Nuremburg"
+  PB_RUS_Close_the_border:0 "Close the Borders"
+  PB_RUS_Determine_the_future_of_the_occuption:0 "Determine the Future of the Occupation"
+
+  PB_RUS_Military_Concerns:0 "Address the Concerns of the Military"
 
   ########################## 
   # Decisions
@@ -724,6 +815,7 @@
   PB_RUS_Project_Solaris_Activated:0 "Project Solaris"
   PB_RUS_Project_Zona_Activated:0 "Project Zona"
   PB_RUS_Project_Commonality_Activated:0 "Project Commonality"
+  PB_RUS_Project_Missing_Link_Activated:0 "Project Hominidae"
 
   PB_RUS_Area_Zero_Add_Assets_Small_tt:0 "§Y+15§! £autonomy_texticon §YAssets§!"
   PB_RUS_Area_Zero_Add_Assets_Medium_tt:0 "§Y+30§! £autonomy_texticon §YAssets§!"
@@ -831,6 +923,11 @@
 
   RUS_AZO_Project_Solaris_Rewards_tt:0 "Upon completion, we will gain an additional §C50§!£research_points_small Monthly Research Points and a lump reward of §C200§!£research_points_small Research Points."
   PB_RUS_Project_Zona_Rewards_tt:0 "Upon completion, §GAgroponics Complexes§! will produce an additional ten §YGrain§! and two §YRubber§!"
+  PB_RUS_Project_Commonality_Rewards_tt:0 "Upon completion, the §CCommonality Consensus§! thesis is proven feasible, allowing access to focuses related to §CCommonality§! implementation."
+  PB_RUS_Project_Missing_Link_Rewards_tt:0 "Upon Completion, unique §OPrimatoid§! special forces combatagates become available for production and deployment."
+  PB_RUS_Project_Autojektor_Rewards_tt:0 "Upon completion, the benefits of §YMedical Buildings§! and §YMedical Support Companies§! are increased significantly."
+  PB_RUS_Project_Primordium_Rewards_tt:0 "Upon completion, a permanent §G20%§! research speed bonus is applied to all §YCombatagate§! and §YBioweapon§! technologies."
+  PB_RUS_Project_Somnambulist_Rewards_tt:0 "Upon completion, a permanent §G10%§! speed and recovery bonus is applied to all units and Intelligence Network gain increases by §G20%§!"
 
   AZO_Project_In_Progress_tt:0 "An §YArea Zero§! Project is already in §Gprogress§!\n\n"
 
@@ -840,7 +937,7 @@
 
   PB_RUS_Project_Commonality_Started_tt:0 "Project §CCOMMONALITY§! will be initiated and our scientists will begin studying ways to achive §CCONSENSUS§!."
   
-  PB_RUS_Project_Missing_Link_Started_tt:0 "Project §OHOMINIDAE§! will be initiated and our scientists will begin researching the creation of §YPrimordiform Combatagates§!."
+  PB_RUS_Project_Missing_Link_Started_tt:0 "Project §OHOMINIDAE§! will be initiated and our scientists will begin researching the creation of §YPrimatoid Combatagates§!."
 
   PB_RUS_Project_Autojektor_Started_tt:0 "Project §rAUTOJEKTOR§! will be initiated and our scientists will begin experiments in the revival of organisms."
 
