--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -1780,21 +1780,21 @@ SIB_Collapse_ds_ADJ:0 ""
 SIB_Collapse_cn_ADJ:0 ""
 SIB_Collapse_an_ADJ:0 ""
 
-RET_kirill_governate_ni:0 "Russian East Africa"
+RET_kirill_governate_ni:0 "Empire of East Africa"
 RET_kirill_governate_ni_DEF:0 "the Russian Governate in East Africa"
-RET_kirill_governate_ds:0 "Russian East Africa"
+RET_kirill_governate_ds:0 "Empire of East Africa"
 RET_kirill_governate_ds_DEF:0 "the Russian Governate in East Africa"
-RET_kirill_governate_rc:0 "Russian East Africa"
+RET_kirill_governate_rc:0 "Empire of East Africa"
 RET_kirill_governate_rc_DEF:0 "the Russian Governate in East Africa"
-RET_kirill_governate_an:0 "Russian East Africa"
+RET_kirill_governate_an:0 "Empire of East Africa"
 RET_kirill_governate_an_DEF:0 "the Russian Governate in East Africa"
-RET_kirill_governate_cn:0 "Russian East Africa"
+RET_kirill_governate_cn:0 "Empire of East Africa"
 RET_kirill_governate_cn_DEF:0 "the Russian Governate in East Africa"
-RET_kirill_governate_lb:0 "Russian East Africa"
+RET_kirill_governate_lb:0 "Empire of East Africa"
 RET_kirill_governate_lb_DEF:0 "the Russian Governate in East Africa"
-RET_kirill_governate_ss:0 "Russian East Africa"
+RET_kirill_governate_ss:0 "Empire of East Africa"
 RET_kirill_governate_ss_DEF:0 "the Russian Governate in East Africa"
-RET_kirill_governate_jc:0 "Russian East Africa"
+RET_kirill_governate_jc:0 "Empire of East Africa"
 RET_kirill_governate_jc_DEF:0 "the Russian Governate in East Africa"
 RET_kirill_governate_ni_ADJ:0 "Afro-Russian"
 RET_kirill_governate_rc_ADJ:0 "Afro-Russian"
@@ -4735,22 +4735,22 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   DDR_Prussian_Integration_cn_ADJ:0 "East German"
   DDR_Prussian_Integration_an_ADJ:0 "East German"
 
-  RET_East_Africa_ni:0 "Russian East Africa"
-  RET_East_Africa_ni_DEF:0 "Russian East Africa"
-  RET_East_Africa_ds:0 "Russian East Africa"
-  RET_East_Africa_ds_DEF:0 "Russian East Africa"
-  RET_East_Africa_rc:0 "Russian East Africa"
-  RET_East_Africa_rc_DEF:0 "Russian East Africa"
-  RET_East_Africa_an:0 "Russian East Africa"
-  RET_East_Africa_an_DEF:0 "Russian East Africa"
-  RET_East_Africa_cn:0 "Russian East Africa"
-  RET_East_Africa_cn_DEF:0 "Russian East Africa"
-  RET_East_Africa_lb:0 "Russian East Africa"
-  RET_East_Africa_lb_DEF:0 "Russian East Africa"
-  RET_East_Africa_ss:0 "Russian East Africa"
-  RET_East_Africa_ss_DEF:0 "Russian East Africa"
-  RET_East_Africa_jc:0 "Russian East Africa"
-  RET_East_Africa_jc_DEF:0 "Russian East Africa"
+  RET_East_Africa_ni:0 "Empire of East Africa"
+  RET_East_Africa_ni_DEF:0 "Empire of East Africa"
+  RET_East_Africa_ds:0 "Empire of East Africa"
+  RET_East_Africa_ds_DEF:0 "Empire of East Africa"
+  RET_East_Africa_rc:0 "Empire of East Africa"
+  RET_East_Africa_rc_DEF:0 "Empire of East Africa"
+  RET_East_Africa_an:0 "Empire of East Africa"
+  RET_East_Africa_an_DEF:0 "Empire of East Africa"
+  RET_East_Africa_cn:0 "Empire of East Africa"
+  RET_East_Africa_cn_DEF:0 "Empire of East Africa"
+  RET_East_Africa_lb:0 "Empire of East Africa"
+  RET_East_Africa_lb_DEF:0 "Empire of East Africa"
+  RET_East_Africa_ss:0 "Empire of East Africa"
+  RET_East_Africa_ss_DEF:0 "Empire of East Africa"
+  RET_East_Africa_jc:0 "Empire of East Africa"
+  RET_East_Africa_jc_DEF:0 "Empire of East Africa"
   RET_East_Africa_ni_ADJ:0 "Russo-African"
   RET_East_Africa_rc_ADJ:0 "Russo-African"
   RET_East_Africa_lb_ADJ:0 "Russo-African"
