--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -671,6 +671,13 @@
  VICTORY_POINTS_10717:0 "Calhoun, D.D"
  VICTORY_POINTS_11654:0 "Buffalo"
  VICTORY_POINTS_11800:0 "Pittsburgh"
+ VICTORY_POINTS_3687:0 "Erie"
+ VICTORY_POINTS_12405:0 "Altoona"
+ VICTORY_POINTS_11785:0 "Harrisburg"
+ VICTORY_POINTS_11799:0 "Allentown"
+ VICTORY_POINTS_9708:0 "Syracuse"
+ VICTORY_POINTS_3806:0 "Troy"
+ VICTORY_POINTS_9693:0 "Albany"
  VICTORY_POINTS_12357:0 "Milwaukee"
  VICTORY_POINTS_638:0 "Gotha"
  VICTORY_POINTS_12459:0 "Portland"
