last of my work before Karneval weekend

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -316,6 +316,9 @@
   PB_BAF_CON:0 "The British African Authority has been dissolved"
   PB_BAF_REF:0 "The British African Authority has been dissolved"
 
+
+  AME_Increase_Tension_1:0 "§RImperial Tension increases by 1%§!"
+  AME_Increase_Tension_2:0 "§RImperial Tension increases by 2%§!"
   AME_Increase_Tension_5:0 "§RImperial Tension increases by 5%§!"
   AME_Increase_Tension_10:0 "§RImperial Tension increases by 10%§!"
   AME_Increase_Tension_15:0 "§RImperial Tension increases by 15%§!"
@@ -333,10 +336,15 @@
 
   AME_Culture_Accept_Angloi:0 "§YAnglois§! becomes an §Gaccepted culture§! of the United Commonwealth"
 
-  # Anglois Crisis 
+  # Tension Game
 
   PM_Concessions_for_Tension_UK:0 "Concede Dominance for Peace" 
   PM_Concessions_for_Tension_UC:0 "Concede Dominance for Peace"
+
+  PM_Call_Up_Reserves:0 "Call up the Reserves"
+  PM_Call_Up_Reserves:0 "We should ready several emergency reserves groups around all of the country... just in case"
+
+  # Anglois Crisis 
 
   PM_Anglois_Crisis_Mission_UK:0 "  Fate of the Anglois Provinces"
   PM_Anglois_Crisis_Mission_UC:0 "  Fate of the Anglois Provinces"
@@ -510,15 +518,15 @@
   Anglois_Crisis.23.a:0 "THE AMERICAN AGE HAS TRUELY BEGUN"
 
   Anglois_Crisis.24.t:0 "QUEBEC INTEGRITY DEFENDED"
-  Anglois_Crisis.24.d:0 ""
+  Anglois_Crisis.24.d:0 "The struggle between Philadelphia and London has ended in a spectacular diplomatic victory for us. The Anglois in Détroit & Chicagou have been successfully dealt with and these territories remain firming in Québec's control. The Commonwealth's efforts to take over these areas have ended in complete disaster. With some of their politicians going so far as to offer an offical apology to our government. Let this be a lesson to any within our control, this is the British Empire. Not the 'Anglo-American' Empire. The British Empire. And the fate of its people will be decided from London."
   Anglois_Crisis.24.a:0 "London is and will always be the Master"
 
   Anglois_Crisis.25.t:0 "STATUS QUO REMAINS"
-  Anglois_Crisis.25.d:0 ""
+  Anglois_Crisis.25.d:0 "Our diplomatic struggle against Philadelphia has ended not with a bang but with a whimper. The Angolis' dissent has become increasingly torublesome to put down. And our dimplomatic efforts have exhausted our political resources. The silver lining for this is that the Commonwealth has the similar problems. Any further attempts to deal with the situation could spark open revolt in the Angolis or worse, thus a compromise was reached. The Commonwealth would gain some territory in Québec but the rest will remain out of their reach. Though an unsatisfying turn of events, it is better than the alternative."
   Anglois_Crisis.25.a:0 "Conflict will doom us all"
 
   Anglois_Crisis.26.t:0 "AMERICA WINS THE ANGLOIS CRISIS"
-  Anglois_Crisis.26.d:0 ""
+  Anglois_Crisis.26.d:0 "Today we are witness to one of the biggest diplomatic defeats we have suffered to our own colonies. Despite the best efforts of our diplomats and politicians, the situation in Southern Québec has proven itself to be completely untenable. Our control over the area hung by a thread, with the American Commonwealth making the situation turn to their favour. As much as it pains us to do so...we have no voice but to submit to their demands. All of the territory they desire will be handed over to them. The crisis is over at least. We must do our best to win the next one."
   Anglois_Crisis.26.a:0 "Was this the right call?"
 
 
