Russia Work Part Three I think
Work on Russia content, changed fictional leader portraits, fixed UK puppeting bug

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -137,6 +137,9 @@
 
   PB_RUS_Area_Zero_Low_Profile:0 "Area Zero Acquisitions Team is Laying Low"
 
+  PB_RUS_AZO_Non_Interference_idea:0 "Debatable Existence"
+  PB_RUS_AZO_Non_Interference_idea_desc:0 "Area Zero, as a blacksite, does not legally exist on any map and is not recognized by even the Russian state. Its military is wholly legally independent of the Russian Empire and thus cannot risk joining conflicts or else risk exposure to the outside world."
+
 
   ##########################
   # EVENTS
@@ -449,7 +452,9 @@
   PB_RUS_End_German_Relations:0 "Ban the German Embassy"
   PB_RUS_End_German_Relations_desc:0 "It has been revealed that the perfidious Germans have been supporting the Polish terrorists. This is no surprise, but after the terrorist attacks in Saint Petersburg, enough is enough. It is time to give the Germans the boot and ban their embassy."
   PB_RUS_Proceed_with_Elections:0 "Proceed with the Elections"
+  PB_RUS_Proceed_with_Elections_desc:0 "Despite the ongoing crisis, the worst thing to do now would be to suspend the elections of the Duma. Not only would it be a crushing blow to the development of a Russian democracy, perhaps even a fatal one, but it would only further increase panic and worsen the crisis and be a prime opportunity for far-left and far-right agitators to drum up trouble. Mother Russia will not back down over a few buildings."
   PB_RUS_Suspend_Elections:0 "Suspend the Elections"
+  PB_RUS_Suspend_Elections_desc:0 "To do what is necessary to combat these barbaric attacks, elections must be suspended. There comes times in every nation's history where its people must temporarily give up freedom for security to ensure the freedom of their future selves and descendants, and these attacks have brought about one of those times for Russia. How temporary this sacrifice will be however, is yet to be seen."
 
   PB_RUS_Implement_Siberian_Plan:0 "Initiate the Siberian Plan"
   PB_RUS_Implement_Siberian_Plan_desc:0 "With more pressing matters being seen to, it is time to turn our attention to the giant black spot on the map of Russia. The lands east of the Urals are sparse with people and even more so with modern technology. With many plans and ideas already being brought forward, a formal effort to cultivate the Siberian region to it's full potential must begin at once!"
