--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -409,13 +409,13 @@
  special_forces_cowboys_8_desc:0 "Many gunslingers travel on horseback but there efficiency is questionable at best, at least in terms of discipline. We can integrate their love of speed with traditional cavarly tactics to make them a formidable force."
 
  supremacy_of_steel:0 "Supremacy of Steel"
- supremacy_of_steel_desc:0 "It thorough the might of Steel that Charlemagne united Europe, that Mehmed II brought the end to Rome, and just like the past war, it will be Steel that wins the next war."
+ supremacy_of_steel_desc:0 "The age in which we live is nothing if not one of steel. Armored unites such as landships, planes, and automotats must be focused on above all else if our war machine is to be successful in the coming wars."
  sos_delaying_actions:0 "Delaying Action"
- sos_delaying_actions_desc:0 "When the enemy is fooled and tricked in every way possible, they shall bleed twice our men"
+ sos_delaying_actions_desc:0 " While the Great War was primarily one of grueling and slow trench warfare, military advances since then have shown that speed will be the name of the game going forward. While increasing our own speed is important, decreasing that of the enemy may be even more so. An unprepared, poorly equipped army makes for easy pickings and little bloodshed. Subterfuge and slowing down the enemy should remain a top priority."
  sos_independent_armor:0 "Independent Armor Detachments"
- sos_independent_armor_desc:0 "The Armor of our nation is the new Winged Hussars of Poland or Elephants of the Mughals. These units shall alone crush whatever and whomever is in their path in a blaze of machinal fury."
+ sos_independent_armor_desc:0 "The Great War demonstrated the obsolesence of a focus on infantry. For years, millions upon millions of men were simply thrown into the meat grinder to little avail, the war only truly being moving towards an end with the development of armored units such as landships and automotats. Even then, they were only used as support for infantry. The development and prioritization of independent mechanical units could very well turn the tide in the next war."
  sos_shock_troopers:0 "Shock Jockey Hardsuits"
- sos_shock_troopers_desc:0 "Our most skilled men shall be given Hardsuits with extremally high voltage Tasers upon them and used as front line shock troops. A Man shall become Steel just as Steel has become Men."
+ sos_shock_troopers_desc:0 "The hardsuit is the latest development in non-vehicular armor, though thus far, it has merely served a defensive purpose, those placed in them using the same weapons as every one else. However, the addition of shock weaponry to their arsenal could give them the offensive edge they so desperately need and further accelerate the move towards hardsuits as the armor of the future."
  sos_armored_core:0 "An Armored Core"
  sos_armored_core_desc:0 "Armor is different from the Calvary or Navy they are compared to. They shall be their own units, with their own commanders, and their own tactics. The Infantry shall fallow behind the Steel Hussars."
  sos_advanced_forces:0 "Advance Forces"
