--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2924,6 +2924,16 @@ modifier_tactic_unexpected_thrust_preferred_weight_factor:1 "Additional §YUnexp
 modifier_tactic_barrage_preferred_weight_factor:1 "Additional §YSuppressive Barrage§! Tactic Chance if it is Preferred tactic"
 modifier_tactic_planned_attack_preferred_weight_factor:1 "Additional §YWell Planned Attack§! Tactic Chance if it is Preferred tactic"
 modifier_tactic_relentless_assault_preferred_weight_factor:1 "Additional §YRelentless Assault§! Tactic Chance if it is Preferred tactic"
+tactic_elastic_defense_preferred_weight_factor:1 "Additional §YElastic Defense§! Tactic Chance if it is Preferred tactic"
+tactic_overwhelming_fire_preferred_weight_factor:1 "Additional §YOverwhelming Fire§! Tactic Chance if it is Preferred tactic"
+tactic_seize_bridge_preferred_weight_factor:1 "Additional §YSeize Bridge§! Tactic Chance if it is Preferred tactic"
+tactic_infantry_charge_preferred_weight_factor:1 "Additional §YInfiltration Assault§! Tactic Chance if it is Preferred tactic"
+tactic_delay_preferred_weight_factor:1 "Additional §YDelay§! Tactic Chance if it is Preferred tactic"
+tactic_human_wave_tactics_preferred_weight_factor:1 "Additional §YMass Charge§! Tactic Chance if it is Preferred tactic"
+tactic_unexpected_thrust_preferred_weight_factor:1 "Additional §YUnexpected Thrust§! Tactic Chance if it is Preferred tactic"
+tactic_barrage_preferred_weight_factor:1 "Additional §YSuppressive Barrage§! Tactic Chance if it is Preferred tactic"
+tactic_planned_attack_preferred_weight_factor:1 "Additional §YWell Planned Attack§! Tactic Chance if it is Preferred tactic"
+tactic_relentless_assault_preferred_weight_factor:1 "Additional §YRelentless Assault§! Tactic Chance if it is Preferred tactic"
 ALREADY_HAS_ADVISOR_WITH_TRAIT:0 "There is already an appointed advisor with this trait."
 POL_investments_monarchist:0 "Monarchist Investments"
 CHANGE_ADVISOR:1 "\nYou can replace this advisor by clicking here and selecting a replacement."
