--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -679,15 +679,15 @@
   ## ANARCHO-LIB
 
   PB_PRS_Imperial_Restoration:0 "Imperial Restoration"
-  PB_PRS_Imperial_Restoration_desc:0 ""
+  PB_PRS_Imperial_Restoration_desc:0 "The Junkers against all odds have restored imperial rule to Prussia. Across the nation there is much jubilation towards the fact that Bouhler and his Vaterland Front have been deposed and although there is still much work to be done in fully removing extremist influences, we can rest for now knowing the hardest task of deposing the tyrant is behind us. Long live the king, long live Prussia. "
   PB_PRS_A_Light_In_The_Abyss:0 "A Light In The Abyss"
-  PB_PRS_A_Light_In_The_Abyss_desc:0 ""
+  PB_PRS_A_Light_In_The_Abyss_desc:0 "Time and effort have healed many wounds beset upon our nation. It is time to fully realize that the threat Bouhler once posed is no more, our children can play safely amongst the streets without fear of harassment or indoctrination. Our scholars can pursue the sciences without political pressure, politicans can do their work unimpeded, and our king can rule with full confidence of his people. "
   PB_PRS_Restore_Imperial_Connections:0 "Restore Imperial Connections"
-  PB_PRS_Restore_Imperial_Connections_desc:0 ""
+  PB_PRS_Restore_Imperial_Connections_desc:0 "Despite our recent takeover of power many have questioned our genuine interests in removing extremist political influences, by sending out imperial delegations to some of our dynastic allies we might be able to reassure them of our intentions."
   PB_PRS_Concord_With_Democracy:0 "Concord With Democracy"
-  PB_PRS_Concord_With_Democracy_desc:0 ""
+  PB_PRS_Concord_With_Democracy_desc:0 "With Bouhler's idiocy finally thrown out of the window and our control restored, we can start looking for new allies around the world who also follow the ideas of liberty."
   PB_PRS_Restore_The_Houses:0 "Restore The Houses"
-  PB_PRS_Restore_The_Houses_desc:0 ""
+  PB_PRS_Restore_The_Houses_desc:0 " Bouhler's stunt has left many of our fellow aristocrats without their rightful authority. Now that we are back in control, we should move to restore our peers in the nobility their God-given rights."
   PB_PRS_Venerate_The_Old:0 "Venerate The Old"
   PB_PRS_Venerate_The_Old_desc:0 ""
   PB_PRS_Continue_The_Aristroctatic_Legacy:0 "Continue The Aristroctatic Legacy"
@@ -695,9 +695,9 @@
   PB_PRS_The_Nobles_Due:0 "The Nobles Due"
   PB_PRS_The_Nobles_Due_desc:0 ""
   PB_PRS_Mobilize_The_New_Blood:0 "Mobolize The New Blood"
-  PB_PRS_Mobilize_The_New_Blood_desc:0 ""
+  PB_PRS_Mobilize_The_New_Blood_desc:0 "We will not be around forever, that is a fact. As the Old Guard die off, more and more of the younger Junkers will take their place, and with them come their ideas of liberty. We should lean more on them as they come to prominence and enshrine their ideas into Prussia itself."
   PB_PRS_A_New_Path:0 "A New Path"
-  PB_PRS_A_New_Path_desc:0 ""
+  PB_PRS_A_New_Path_desc:0 "With the ideas of the younger Junkers firmly embedded in our cause, it's time we follow up and finish what we set out to do when we gained independence from Russia before Bouhler pulled his stunt, and that is to make Prussia a constitutional monarchy along the lines of those of Britain and Germany."
   PB_PRS_The_First_Citizens:0 "The First Citizens"
   PB_PRS_The_First_Citizens_desc:0 ""
   PB_PRS_Promote_Shared_Heritage:0 "Promote Shared Heritage"
@@ -947,6 +947,10 @@
   Prussian.32.d:0 "Schulz and his entourage had finally reached the outskirts of Lhasa, few of his men had expected such a lengthy process to reach the subterranean cave networks that had initially sparked Schulz’s interests in the region. Many had begun to grow increasingly defiant to the demands of Schulz, even the senior military staff, of whom numbered less than ten, had begun to question the whole reason that had propelled them into the middle of the Tibetan Plateau. At last, though the expeditionary group had reached their destination, what was at first sight simply a mere small cave entrance in fact opened up to be a massive network of interconnecting subterranean systems large enough to support simple cave life. What was most perplexing and the whole reason for the expedition in the first place was that if one travelled far enough into the cave eventually it seemed that once previously traversed regions had shifted around to form a sort of rotating puzzle network designed to keep intruders out. Smaller groups of men would suddenly encounter the very same tunnel networks previously explored, or bump into their fellow comrades, just to get lost and circle around in an endless spiral of confusion as to where exactly they were, and the further they travelled into the cave the worse it got. The cave would bellow out a loud groaning noise whenever these tectonic shifts would occur, but the actual process could never be witnessed, one moment a tunnel would appear and the next it would instantaneously become nothing more than a rock formation.  Eventually after enough spelunking the men would finally find their way into what could only be described as a picturesque representation of heaven; lush green fields, tall lively trees, and the singing of birds entered the sight of the now tired men. Amazement filled their hearts and not a word was said during the initial minutes of entry into this naturalistic utopia, even Schulz found himself stunned by the beauty this garden presented itself with.\n\nAfter a few minutes of joyful yells and applause the men had noticed something bizarre shining bright through the gardens rich water features, a ball no larger than the palm of a hand exerted a blinding bright light. Despite the strain it caused to the eyes of the men an intoxicating urge to retrieve the ball had befallen them, few could resist the pull the strange object emitted. Eventually amongst the outcome of a small tussle between some of the men a small fickle boy managed to pull the ball out of the water for closer inspection. The boy who was now crowed by his intrigued comrades had described a sensation of immense power, as if he was holding the power of a thousand suns. " 
   Prussian.32.a:0 "This could have its uses..."
   Prussian.32.b:0 "Such a object deserves to be destroyed."
+  Prussian.33.t:0 "The Junker Threat"
+  Prussian.33.d:0 "" 
+  Prussian.33.a:0 "A cancer on out great nation."
+
 
   
   Prussian_Anarcho.1.t:0 "Prussian Exiles Arrive"
