A LOT of Balancing and Tweaking for AME

--- a/localisation/english/PB_Britain_l_english.yml
+++ b/localisation/english/PB_Britain_l_english.yml
@@ -1962,7 +1962,7 @@
   britain.4001.a:0 "Work smarter, not harder, damnit."
 
   britain.4002.t:0 "Britain proposes the Sterling Zone"
-  britain.4002.d:0 ""
+  britain.4002.d:0 "The Pound Stirling is the Greatest currency on this Earth and is used as the international currency all over the world. It is therefore natural for the Britain to will the Imperial Federation to use its own Imperial currency- the Pound Stirling in all lands controlled by the Federation.\n\nThis shall see more power handed over to London and a new Bank of Empire to control the new Zone which allow for easier flow of trade under our oversight whilst also allowing London to control the Dominions trade more easily- a Great Opportunity for England to cement herself as the financial hub of Empire."
   britain.4002.a:0 "An exceptional proposal!"
   britain.4002.b:0 "We're not interested"
 
@@ -1993,11 +1993,11 @@
   britain.4008.b:0 "We cannot make any further concessions"
 
   britain.4009.t:0 "The United Commonwealth Agrees!"
-  britain.4009.d:0 "The United Commonwealth has agreed to our proposal"
-  britain.4009.a:0 "Great"
+  britain.4009.d:0 "The United Commonwealth has agreed to our proposal to join the Sterling Zone."
+  britain.4009.a:0 "An Important Step for the Confederation"
 
   britain.4010.t:0 "The United Commonwealth Refuses!"
-  britain.4010.d:0 "The United Commonwealth has refused our proposal!"
+  britain.4010.d:0 "The United Commonwealth has refused our proposal to join the Sterling Zone!"
   britain.4010.a:0 "Terrible"
 
   britain.4011.t:0 "Quebec Agrees!"
