--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -139,6 +139,8 @@
   DEN_Arms_Shipment:0 "Since [DEN.GetFlag] §YDenmark§! is not at war with us and still exists you will gain the following:\n"
   PB_PRS_Total_Defense_tt:0 "For each fully controlled and cored state level §Y3§! and level §Y5§! forts will be constructed, the fort level depends on the VP score of the province.\n\n"
   add_potential_special_forces_tree_tt:0 "Special Forces Branch Cap: §G+1§!"
+  PRS_Leave_Russian_Sphere_tt:0 "Prussia leaves the [RUS.GetFlag] Russian §HSphere of Influence§!"
+  PRS_Join_French_Sphere_tt:0 "Prussia joins the [FRA.GetFlag] French §HSphere of Influence§!"
 
   ##########################
   # MECHANICS
@@ -839,14 +841,14 @@
   Prussian.3.a:0 "Our acedemics aren't for sale."
   Prussian.3.b:0 "Anything to further the reactionary cause."
   Prussian.4.t:0 "Posen In Flames"
-  Prussian.4.d:0 "" 
+  Prussian.4.d:0 "Ever since our war of independence against Russia the territory of Posen has been under our de-facto control. Whilst on paper Posen is under the rule of the Polish government in practice Warsaw excises no authority over the land in any capacity. We have had a permanent presence in the region for some time now and Bouhler intends on incorporating Posen into a core part of the Prussian nation. The next few months may prove to be difficult but if we stamp out Polish sentiment now then we can finally secure ourselves this vital region of strategic importance." 
   Prussian.4.a:0 "This can't be good."
   Prussian.5.t:0 "Prussia Attempts A Compromise"
   Prussian.5.d:0 "" 
   Prussian.5.a:0 "Posen is Polish."
   Prussian.5.b:0 "Something is better than nothing."
   Prussian.6.t:0 "End Of The Posen Crisis"
-  Prussian.6.d:0 "" 
+  Prussian.6.d:0 "After months of cultural integration efforts in the form of festivals, mandatory language lessons, and the odd enforced patriotism we have managed to integrate Posen as an inseparable region of Prussia, whilst there may be the occasional dissenter for the most part Posen is Prussian." 
   Prussian.6.a:0 "Finally."
   Prussian.7.t:0 "The Last King Of Prussia"
   Prussian.7.d:0 "" 
